Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-60382

Intermittent failure in GetKeysTests.GetAllKeysAdministrator

Details

    Description

      Hit multiple times in a row.

      https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/28263/

      [ RUN      ] GetKeysTests.GetAllKeysAdministrator
      [2024-01-15T15:55:59.631Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp_cluster/get_keys_test.cc:216: Failure
      [2024-01-15T15:55:59.631Z] Expected equality of these values:
      [2024-01-15T15:55:59.631Z]   1001
      [2024-01-15T15:55:59.631Z]   keys.size()
      [2024-01-15T15:55:59.631Z]     Which is: 1000
      [2024-01-15T15:55:59.631Z] 
      [2024-01-15T15:55:59.631Z] [  FAILED  ] GetKeysTests.GetAllKeysAdministrator (12 ms)
      

      Attachments

        For Gerrit Dashboard: MB-60382
        # Subject Branch Project Status CR V

        Activity

          People

            mohammad.zaeem Mohammad Zaeem
            paolo.cocchi Paolo Cocchi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There is 1 open Gerrit change

                PagerDuty